@@ -1,0 +1,7 @@
+urlpath=/projects/devtools
+
+page_SCRIPTS=\
+	index.shtml
+
+include $(top_srcdir)/rules.common
+
