@@ -1,5 +1,10 @@
 2008-10-04  daniel g. siegel <dgsiegel@gmail.com>
 
+	* www.gnome.org/projects/devtools/Makefile.am: 
+	  add the missing Makefile to devtools, which failed previously
+
+2008-10-04  daniel g. siegel <dgsiegel@gmail.com>
+
 	* www.gnome.org/index.wml: 
 	  undo changes on the frontpage which should not have been
 	  committed, sorry guys
